id incorporado a Treballador

--- a/src/interficies/GestioUsuaris.form
+++ b/src/interficies/GestioUsuaris.form
@@ -86,7 +86,9 @@
                                       </Group>
                                       <Component id="nom" alignment="0" max="32767" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="-2" pref="242" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                                  <Component id="_id" min="-2" pref="27" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -146,6 +148,7 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="dni" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="_id" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -272,6 +275,8 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JTextField" name="_id">
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
