Classe Treballador ampliada

--- a/src/interficies/GestioUsuaris.form
+++ b/src/interficies/GestioUsuaris.form
@@ -55,7 +55,7 @@
                               <Component id="jLabel6" min="-2" pref="57" max="-2" attributes="0"/>
                               <Component id="label1" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="238" max="32767" attributes="0"/>
+                          <EmptySpace min="238" pref="488" max="32767" attributes="0"/>
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       </Group>
@@ -88,7 +88,7 @@
                                           <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                                           <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="dni" pref="206" max="32767" attributes="0"/>
+                                          <Component id="dni" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="1" attributes="0">
                                           <EmptySpace max="32767" attributes="0"/>
